argo-events/webhooks/webhook-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway
  labels:
    gateways.argoproj.io/gateway-controller-instanceid: argo
    gateway-name: "webhook-gateway"
spec:
  configMap: "webhook-gateway-configmap"
  type: "webhook"
  dispatchMechanism: "HTTP"
  eventVersion: "1.0"
  imageVersion: "latest"
  deploySpec:
    containers:
      - name: "webhook-events"
        image: "argoproj/webhook-gateway"
        imagePullPolicy: "IfNotPresent"
        command: ["/bin/webhook-gateway"]
    serviceAccountName: "argo-events-sa"
  transformerImage: "argoproj/gateway-http-transformer"
  serviceSpec:
    selector:
      gateway-name: "webhook-gateway"
    ports:
      - port: 12000
        targetPort: 12000
    type: LoadBalancer
  watchers:
    sensors:
      - name: "webhook-sensor"
